--- a/about.html
+++ b/about.html
@@ -5,12 +5,12 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-     <meta name="description" content="About us, !MetaDescription">
-    <meta name="keywords" content="about us, !MetaKeywords">
+     <meta name="description" content="About us,San Antonio">
+    <meta name="keywords" content="about us,San Antonio, Texas, TX, Businesses, Business, Listings, Directory">
     <meta name="author" content="">
 
-    <title>About Us | !HomeTitle</title>
-<link rel="canonical" href="!self" />
+    <title>About Us | San Antonio</title>
+<link rel="canonical" href="https://arkansasseo.github.io/sanantonio/about.html" />
     <!-- Bootstrap core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
 
@@ -35,14 +35,16 @@ body {
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-       <a class="navbar-brand" href="!homeLink">!SiteName</a>
+       <a class="navbar-brand" href="https://arkansasseo.github.io/sanantonio/"><!--Site Name-->
+San Antonio
+<!--endSite Name--></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="!homeLink">Home
+              <a class="nav-link" href="https://arkansasseo.github.io/sanantonio/">Home
                 <span class="sr-only">(current)</span>
               </a>
             </li>
@@ -68,7 +70,7 @@ body {
         <!-- Post Content Column -->
         <div class="col-lg-8">
 
-         <p> Learn all about me and my business on this page <a href="!homeLink">!HomeTitle</a></p>
+         <p> Learn all about me and my business on this page <a href="https://arkansasseo.github.io/sanantonio/">San Antonio</a></p>
           
           <hr>
 
@@ -135,7 +137,9 @@ body {
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
-        <p class="m-0 text-center text-white">!FooterText</p>
+        <p class="m-0 text-center text-white"><!--Footer-->
+Author @ <a href="https://storage.googleapis.com/sanantonio/index.html" target="_blank" title="" style="font-size:16px; color:#ff0000; font-family:Arial; decoration:none;">San Antonio</a> | <a href="https://arkansasseo.github.io/sanantonio/sitemap.html">read more</a>
+<!--endFooter--></p>
       </div>
       <!-- /.container -->
     </footer>
